--- a/weather/build.gradle
+++ b/weather/build.gradle
@@ -19,7 +19,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.hibernate:hibernate-core:5.4.29.Final'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'io.projectreactor:reactor-test'
+
+
+    testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 	runtimeOnly 'mysql:mysql-connector-java'
 }
 
